# Protocol_Buffer

./: README.md
Studying_Test/test_1/: address.pb.h  address.proto
Studying_Test/test_2/: msg.proto  useMsg.cpp
Studying_Test/test_3/: CMakeLists.txt  README.md
Studying_Test/test_3/include/: person.h
Studying_Test/test_3/proto/: student.proto
Studying_Test/test_3/src/: main.cpp  person.cc
Studying_Test/test_one/: address.pb.cc  useProtoBuf.cpp
